# gamma-zmk-config

./: build.yaml
boards/gamma/: Kconfig  Kconfig.defconfig  Kconfig.gamma_dongle  Kconfig.gamma_left  Kconfig.gamma_right  board.yml  gamma-layouts.dtsi  gamma.dtsi  gamma.yaml  gamma.zmk.yml  gamma_dongle-pinctrl.dtsi  gamma_dongle.dts  gamma_dongle_defconfig  gamma_left-pinctrl.dtsi  gamma_left.dts  gamma_left_defconfig  gamma_right.dts  gamma_right_defconfig
config/: CMakeLists.txt  Kconfig  gamma.c  gamma.keymap  gamma_led_probe.c  gamma_led_test.c  verify_marker.py  west.yml
zephyr/: CMakeLists.txt  Kconfig  module.yml
